--- a/requirements.txt
+++ b/requirements.txt
@@ -100,3 +100,11 @@ urllib3==2.2.2
 wcwidth==0.2.13
 wheel==0.44.0
 zipp==3.20.1
+bokeh>=3.6.2
+bs4>=0.0.2
+jupyter>=1.1.1
+jupyter-book>=1.0.3
+matplotlib>=3.10.0
+pandas>=2.2.3
+requests>=2.32.3
+textstat>=0.7.4
