--- a/_toc.yml
+++ b/_toc.yml
@@ -11,27 +11,28 @@ parts:
     - file: research_question/esearch-question_research-question
     - file: research_question/research-question_operationalization
     - file: research_question/research-question_summary
-  - caption: Korpusaufbau. Text als digitale Objekte 
+  - caption: Korpora als epistemische Objekte 
     chapters:
     - file: corpus_collection/corpus-collection_intro    
     - file: corpus_collection/corpus-collection_corpora-as-research-objects
-    - file: corpus_collection/corpus-collection_text_as_digital_objects
     - file: corpus_collection/corpus-collection_metadata
     - file: corpus_collection/corpus-collection_building-our-corpus
     - file: corpus_collection/corpus-collection_summary
-  - caption: Scraping als Methode zur Korpusbildung
-    chapters:
+  - caption: Scraping als Methode zum Korpusaufbau
+    chapters: 
     - file: scraping_intro/scraping_intro
     - file: scraping_intro/scraping_method-overview
-    - file: scraping_intro/scraping_html_intro
     - file: scraping_intro/scraping_accessing_a_website
-    - file: scraping_intro/scraping_structual-analysis
-    - file: scraping_intro/scraping_summary
-  - caption: Scraping des Analysekorpus
-    chapters:
-    - file: scraping_corpus/scraping-list_intro
       #- file: scraping/scraping-list_selenium
-    - file: scrapng_corpus/scraping-list_summary
+    - file: scraping_intro/scraping_summary
+  - caption: Texte als digitale Objekt. Einführung in HTML
+    chapters:
+    - file: html_intro/html-intro_intro
+    - file: html_intro/html-intro_text_as_digital_objects
+    - file: html_intro/html-intro_html-intro
+    - file: html_intro/html-intro_structural-analysis
+    #- file: html_intro/html-intro_analysis-corpus
+    - file: html_intro/html-intro_summary
   - caption: Korpusanalyse. Textkomplexität
     chapters:
     - file: corpus_analysis/corpus-analysis_intro
